--- a/FlowchartEditorClient/app/src/main/res/layout/activity_login.xml
+++ b/FlowchartEditorClient/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorSurface">
+    android:background="@drawable/bg_gradient">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -16,13 +16,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="32dp"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:background="?attr/colorSurface"
+            android:layout_margin="24dp"
+            android:elevation="4dp"
+            android:layout_gravity="center_vertical">
 
             <!-- Заголовок -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Project Manager"
+                android:text="Block diagram editor"
                 android:textSize="28sp"
                 android:textStyle="bold"
                 android:textColor="?attr/colorOnSurface"
@@ -39,6 +43,7 @@
 
             <!-- Форма -->
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/loginInputLayout"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,6 +56,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/passwordInputLayout"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -74,7 +80,7 @@
                 android:text="Войти"
                 android:textSize="16sp"
                 app:cornerRadius="20dp"
-                style="@style/Widget.Material3.Button"/>
+                style="@style/Widget.FlowchartEditorClient.Button"/>
 
             <!-- Регистрация -->
             <TextView
@@ -83,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:text="Создать аккаунт"
                 android:textSize="14sp"
-                android:textColor="?attr/colorPrimary"
+                android:textColor="@color/colorTertiary"
                 android:layout_marginTop="24dp"
                 android:padding="8dp"
                 android:clickable="true"
