--- a/FlowchartEditorClient/app/src/main/res/layout/fragment_project_members.xml
+++ b/FlowchartEditorClient/app/src/main/res/layout/fragment_project_members.xml
@@ -5,27 +5,9 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_dark_gray">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_dark_gray"
-        android:elevation="4dp">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:title="Участники проекта"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@drawable/toolbar_dark_gray"
-            app:titleTextColor="#FFFFFF"
-            app:navigationIconTint="#FFFFFF"/>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerMembers"
@@ -80,16 +62,6 @@
         app:backgroundTint="#667eea"
         app:cornerRadius="16dp"
         app:elevation="2dp"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnViewInvitations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
-        android:layout_margin="24dp"
-        android:text="Приглашения"
-        android:icon="@android:drawable/ic_menu_share"
-        style="@style/Widget.Material3.Button.OutlinedButton"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
