--- a/FlowchartEditorClient/app/src/main/res/menu/menu_project_list.xml
+++ b/FlowchartEditorClient/app/src/main/res/menu/menu_project_list.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_my_id"
-        android:title="Мой ID"
-        android:icon="@android:drawable/ic_menu_myplaces"
+        android:id="@+id/menu_invitations"
+        android:title="Мои приглашения"
+        android:icon="@android:drawable/ic_menu_share"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_logout"
